5067 Use Path.of